parser/.antlr/RPLParser.java
// Generated from c:/Users/KoolAid/Downloads/APL/Project/RPL/antlr_tool/RPLParser.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class RPLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ROLE=1, USER=2, RESOURCE=3, ALLOW=4, DENY=5, ACTION=6, ON=7, IF=8, AND=9, 
		OR=10, NOT=11, CAN=12, EQ=13, NE=14, LT=15, GT=16, LE=17, GE=18, PLUS=19, 
		MINUS=20, DIV=21, STAR=22, LPAREN=23, RPAREN=24, LBRACE=25, RBRACE=26, 
		COLON=27, COMMA=28, DOT=29, BOOLEAN=30, INTEGER=31, REAL=32, STRING=33, 
		CHARACTER=34, IDENTIFIER=35, WS=36, LINE_COMMENT=37, BLOCK_COMMENT=38;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_roleDeclaration = 2, RULE_rolePermissions = 3, 
		RULE_permission = 4, RULE_userDeclaration = 5, RULE_userAttributes = 6, 
		RULE_userAttribute = 7, RULE_resourceDeclaration = 8, RULE_resourceAttributes = 9, 
		RULE_resourceAttribute = 10, RULE_policyRule = 11, RULE_policyType = 12, 
		RULE_actionList = 13, RULE_resourceRef = 14, RULE_ifClause = 15, RULE_condition = 16, 
		RULE_comparison = 17, RULE_comparisonOp = 18, RULE_expression = 19, RULE_memberAccess = 20, 
		RULE_value = 21;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "roleDeclaration", "rolePermissions", "permission", 
			"userDeclaration", "userAttributes", "userAttribute", "resourceDeclaration", 
			"resourceAttributes", "resourceAttribute", "policyRule", "policyType", 
			"actionList", "resourceRef", "ifClause", "condition", "comparison", "comparisonOp", 
			"expression", "memberAccess", "value"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, "'DENY'", "'action'", "'ON'", "'IF'", "'AND'", 
			"'OR'", "'NOT'", "'can'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", 
			"'+'", "'-'", "'/'", "'*'", "'('", "')'", "'{'", "'}'", "':'", "','", 
			"'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ROLE", "USER", "RESOURCE", "ALLOW", "DENY", "ACTION", "ON", "IF", 
			"AND", "OR", "NOT", "CAN", "EQ", "NE", "LT", "GT", "LE", "GE", "PLUS", 
			"MINUS", "DIV", "STAR", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "COLON", 
			"COMMA", "DOT", "BOOLEAN", "INTEGER", "REAL", "STRING", "CHARACTER", 
			"IDENTIFIER", "WS", "LINE_COMMENT", "BLOCK_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "RPLParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RPLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(RPLParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 62L) != 0)) {
				{
				{
				setState(44);
				statement();
				}
				}
				setState(49);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(50);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public RoleDeclarationContext roleDeclaration() {
			return getRuleContext(RoleDeclarationContext.class,0);
		}
		public UserDeclarationContext userDeclaration() {
			return getRuleContext(UserDeclarationContext.class,0);
		}
		public ResourceDeclarationContext resourceDeclaration() {
			return getRuleContext(ResourceDeclarationContext.class,0);
		}
		public PolicyRuleContext policyRule() {
			return getRuleContext(PolicyRuleContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(56);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ROLE:
				enterOuterAlt(_localctx, 1);
				{
				setState(52);
				roleDeclaration();
				}
				break;
			case USER:
				enterOuterAlt(_localctx, 2);
				{
				setState(53);
				userDeclaration();
				}
				break;
			case RESOURCE:
				enterOuterAlt(_localctx, 3);
				{
				setState(54);
				resourceDeclaration();
				}
				break;
			case ALLOW:
			case DENY:
				enterOuterAlt(_localctx, 4);
				{
				setState(55);
				policyRule();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RoleDeclarationContext extends ParserRuleContext {
		public TerminalNode ROLE() { return getToken(RPLParser.ROLE, 0); }
		public TerminalNode IDENTIFIER() { return getToken(RPLParser.IDENTIFIER, 0); }
		public TerminalNode LBRACE() { return getToken(RPLParser.LBRACE, 0); }
		public RolePermissionsContext rolePermissions() {
			return getRuleContext(RolePermissionsContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(RPLParser.RBRACE, 0); }
		public RoleDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_roleDeclaration; }
	}

	public final RoleDeclarationContext roleDeclaration() throws RecognitionException {
		RoleDeclarationContext _localctx = new RoleDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_roleDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(ROLE);
			setState(59);
			match(IDENTIFIER);
			setState(60);
			match(LBRACE);
			setState(61);
			rolePermissions();
			setState(62);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RolePermissionsContext extends ParserRuleContext {
		public TerminalNode CAN() { return getToken(RPLParser.CAN, 0); }
		public TerminalNode COLON() { return getToken(RPLParser.COLON, 0); }
		public List<PermissionContext> permission() {
			return getRuleContexts(PermissionContext.class);
		}
		public PermissionContext permission(int i) {
			return getRuleContext(PermissionContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(RPLParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(RPLParser.COMMA, i);
		}
		public RolePermissionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rolePermissions; }
	}

	public final RolePermissionsContext rolePermissions() throws RecognitionException {
		RolePermissionsContext _localctx = new RolePermissionsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_rolePermissions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			match(CAN);
			setState(65);
			match(COLON);
			setState(66);
			permission();
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(67);
				match(COMMA);
				setState(68);
				permission();
				}
				}
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PermissionContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(RPLParser.IDENTIFIER, 0); }
		public TerminalNode STAR() { return getToken(RPLParser.STAR, 0); }
		public PermissionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_permission; }
	}

	public final PermissionContext permission() throws RecognitionException {
		PermissionContext _localctx = new PermissionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_permission);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			_la = _input.LA(1);
			if ( !(_la==STAR || _la==IDENTIFIER) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UserDeclarationContext extends ParserRuleContext {
		public TerminalNode USER() { return getToken(RPLParser.USER, 0); }
		public TerminalNode IDENTIFIER() { return getToken(RPLParser.IDENTIFIER, 0); }
		public TerminalNode LBRACE() { return getToken(RPLParser.LBRACE, 0); }
		public UserAttributesContext userAttributes() {
			return getRuleContext(UserAttributesContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(RPLParser.RBRACE, 0); }
		public UserDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_userDeclaration; }
	}

	public final UserDeclarationContext userDeclaration() throws RecognitionException {
		UserDeclarationContext _localctx = new UserDeclarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_userDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(USER);
			setState(77);
			match(IDENTIFIER);
			setState(78);
			match(LBRACE);
			setState(79);
			userAttributes();
			setState(80);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UserAttributesContext extends ParserRuleContext {
		public List<UserAttributeContext> userAttribute() {
			return getRuleContexts(UserAttributeContext.class);
		}
		public UserAttributeContext userAttribute(int i) {
			return getRuleContext(UserAttributeContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(RPLParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(RPLParser.COMMA, i);
		}
		public UserAttributesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_userAttributes; }
	}

	public final UserAttributesContext userAttributes() throws RecognitionException {
		UserAttributesContext _localctx = new UserAttributesContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_userAttributes);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			userAttribute();
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(83);
				match(COMMA);
				setState(84);
				userAttribute();
				}
				}
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UserAttributeContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(RPLParser.IDENTIFIER, 0); }
		public TerminalNode COLON() { return getToken(RPLParser.COLON, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public UserAttributeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_userAttribute; }
	}

	public final UserAttributeContext userAttribute() throws RecognitionException {
		UserAttributeContext _localctx = new UserAttributeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_userAttribute);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			match(IDENTIFIER);
			setState(91);
			match(COLON);
			setState(92);
			value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ResourceDeclarationContext extends ParserRuleContext {
		public TerminalNode RESOURCE() { return getToken(RPLParser.RESOURCE, 0); }
		public TerminalNode IDENTIFIER() { return getToken(RPLParser.IDENTIFIER, 0); }
		public TerminalNode LBRACE() { return getToken(RPLParser.LBRACE, 0); }
		public ResourceAttributesContext resourceAttributes() {
			return getRuleContext(ResourceAttributesContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(RPLParser.RBRACE, 0); }
		public ResourceDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_resourceDeclaration; }
	}

	public final ResourceDeclarationContext resourceDeclaration() throws RecognitionException {
		ResourceDeclarationContext _localctx = new ResourceDeclarationContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_resourceDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(RESOURCE);
			setState(95);
			match(IDENTIFIER);
			setState(96);
			match(LBRACE);
			setState(97);
			resourceAttributes();
			setState(98);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ResourceAttributesContext extends ParserRuleContext {
		public List<ResourceAttributeContext> resourceAttribute() {
			return getRuleContexts(ResourceAttributeContext.class);
		}
		public ResourceAttributeContext resourceAttribute(int i) {
			return getRuleContext(ResourceAttributeContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(RPLParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(RPLParser.COMMA, i);
		}
		public ResourceAttributesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_resourceAttributes; }
	}

	public final ResourceAttributesContext resourceAttributes() throws RecognitionException {
		ResourceAttributesContext _localctx = new ResourceAttributesContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_resourceAttributes);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			resourceAttribute();
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(101);
				match(COMMA);
				setState(102);
				resourceAttribute();
				}
				}
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ResourceAttributeContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(RPLParser.IDENTIFIER, 0); }
		public TerminalNode COLON() { return getToken(RPLParser.COLON, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public ResourceAttributeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_resourceAttribute; }
	}

	public final ResourceAttributeContext resourceAttribute() throws RecognitionException {
		ResourceAttributeContext _localctx = new ResourceAttributeContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_resourceAttribute);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(IDENTIFIER);
			setState(109);
			match(COLON);
			setState(110);
			value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PolicyRuleContext extends ParserRuleContext {
		public PolicyTypeContext policyType() {
			return getRuleContext(PolicyTypeContext.class,0);
		}
		public TerminalNode ACTION() { return getToken(RPLParser.ACTION, 0); }
		public List<TerminalNode> COLON() { return getTokens(RPLParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(RPLParser.COLON, i);
		}
		public ActionListContext actionList() {
			return getRuleContext(ActionListContext.class,0);
		}
		public TerminalNode ON() { return getToken(RPLParser.ON, 0); }
		public TerminalNode RESOURCE() { return getToken(RPLParser.RESOURCE, 0); }
		public ResourceRefContext resourceRef() {
			return getRuleContext(ResourceRefContext.class,0);
		}
		public IfClauseContext ifClause() {
			return getRuleContext(IfClauseContext.class,0);
		}
		public PolicyRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_policyRule; }
	}

	public final PolicyRuleContext policyRule() throws RecognitionException {
		PolicyRuleContext _localctx = new PolicyRuleContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_policyRule);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			policyType();
			setState(113);
			match(ACTION);
			setState(114);
			match(COLON);
			setState(115);
			actionList();
			setState(116);
			match(ON);
			setState(117);
			match(RESOURCE);
			setState(118);
			match(COLON);
			setState(119);
			resourceRef();
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IF) {
				{
				setState(120);
				ifClause();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PolicyTypeContext extends ParserRuleContext {
		public TerminalNode ALLOW() { return getToken(RPLParser.ALLOW, 0); }
		public TerminalNode DENY() { return getToken(RPLParser.DENY, 0); }
		public PolicyTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_policyType; }
	}

	public final PolicyTypeContext policyType() throws RecognitionException {
		PolicyTypeContext _localctx = new PolicyTypeContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_policyType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			_la = _input.LA(1);
			if ( !(_la==ALLOW || _la==DENY) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ActionListContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(RPLParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(RPLParser.IDENTIFIER, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(RPLParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(RPLParser.COMMA, i);
		}
		public ActionListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_actionList; }
	}

	public final ActionListContext actionList() throws RecognitionException {
		ActionListContext _localctx = new ActionListContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_actionList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(IDENTIFIER);
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(126);
				match(COMMA);
				setState(127);
				match(IDENTIFIER);
				}
				}
				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ResourceRefContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(RPLParser.IDENTIFIER, 0); }
		public TerminalNode STRING() { return getToken(RPLParser.STRING, 0); }
		public ResourceRefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_resourceRef; }
	}

	public final ResourceRefContext resourceRef() throws RecognitionException {
		ResourceRefContext _localctx = new ResourceRefContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_resourceRef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			_la = _input.LA(1);
			if ( !(_la==STRING || _la==IDENTIFIER) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IfClauseContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(RPLParser.IF, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public IfClauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifClause; }
	}

	public final IfClauseContext ifClause() throws RecognitionException {
		IfClauseContext _localctx = new IfClauseContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_ifClause);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			match(IF);
			setState(136);
			condition(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConditionContext extends ParserRuleContext {
		public ConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition; }
	 
		public ConditionContext() { }
		public void copyFrom(ConditionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class OrConditionContext extends ConditionContext {
		public List<ConditionContext> condition() {
			return getRuleContexts(ConditionContext.class);
		}
		public ConditionContext condition(int i) {
			return getRuleContext(ConditionContext.class,i);
		}
		public TerminalNode OR() { return getToken(RPLParser.OR, 0); }
		public OrConditionContext(ConditionContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AndConditionContext extends ConditionContext {
		public List<ConditionContext> condition() {
			return getRuleContexts(ConditionContext.class);
		}
		public ConditionContext condition(int i) {
			return getRuleContext(ConditionContext.class,i);
		}
		public TerminalNode AND() { return getToken(RPLParser.AND, 0); }
		public AndConditionContext(ConditionContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class NotConditionContext extends ConditionContext {
		public TerminalNode NOT() { return getToken(RPLParser.NOT, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public NotConditionContext(ConditionContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ParenConditionContext extends ConditionContext {
		public TerminalNode LPAREN() { return getToken(RPLParser.LPAREN, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(RPLParser.RPAREN, 0); }
		public ParenConditionContext(ConditionContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ComparisonConditionContext extends ConditionContext {
		public ComparisonContext comparison() {
			return getRuleContext(ComparisonContext.class,0);
		}
		public ComparisonConditionContext(ConditionContext ctx) { copyFrom(ctx); }
	}

	public final ConditionContext condition() throws RecognitionException {
		return condition(0);
	}

	private ConditionContext condition(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ConditionContext _localctx = new ConditionContext(_ctx, _parentState);
		ConditionContext _prevctx = _localctx;
		int _startState = 32;
		enterRecursionRule(_localctx, 32, RULE_condition, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				_localctx = new NotConditionContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
